--- a/css/style.css
+++ b/css/style.css
@@ -39,4 +39,34 @@ main {
 
 #text_container {
     color: #fff;
+    font-family: 'Times New Roman', Times, serif;
+    line-height: 20px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+#contactBtn {
+    text-decoration: none;
+    color: #fff;
+    padding: 10px;
+    border: 1px solid #fff;
+    display: inline-block;
+    border-radius: 5px;
+}
+
+#logo {
+    height: 40px;
+    width: 40px;
+    border: 0;
+}
+
+#link {
+    display: inline-block;
+    margin-left: 10px;
+    margin-top: 10px;
+}
+
+#bonjour {
+    font-size: 3em;
 }
